--- a/src/components/signin/signin.styles.scss
+++ b/src/components/signin/signin.styles.scss
@@ -1,6 +1,15 @@
 .signin {
-    width: 30vw;
+    width: 380px;
     display: flex;
     flex-direction: column;
     margin: 10px 0;
+
+    .title {
+        margin: 10px 0;
+    }
+
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
 }
